--- a/subscription.yaml
+++ b/subscription.yaml
@@ -1,37 +1,214 @@
 proxies:
-  - {name: 🇸🇬 Singapore 01, server: 2606:4700:8d9a:3c7f:cf17:e3b5:a942:65c8, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇸🇬 Singapore 02, server: 2606:4700:8d97:eec8:7a96:c6b7:22e:f8a3, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇸🇬 Singapore 03, server: 2606:4700:8d95:4b23:558f:43ae:8c:a36a, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇸🇬 Singapore 04, server: 2606:4700:8d9d:6919:2223:d144:ff99:49e7, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇸🇬 Singapore 05, server: 2606:4700:8d7a:9670:a217:381d:533a:24c3, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇸🇬 Singapore 06, server: 2606:4700:9a6c:7702:495:f1b7:186f:1225, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇸🇬 Singapore 07, server: 2606:4700:90ce:430a:b7e3:34e1:88bd:cc9b, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇸🇬 Singapore 08, server: 2606:4700:8d91:b1d8:82a0:3a2f:fa58:801d, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇸🇬 Singapore 09, server: 2606:4700:8ded:5607:1709:114c:21c7:9fee, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇸🇬 Singapore 10, server: 2606:4700:91bf:dc2f:790e:fc67:419:e3b6, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇫🇷 Paris 01, server: 2606:4700:9a6c:a023:ff35:6a77:4f4e:4ff5, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇫🇷 Paris 02, server: 2606:4700:90cf:53cc:9d1c:473a:52bf:68f5, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇫🇷 Paris 03, server: 2606:4700:8d9f:55d2:7885:efd:5d29:2856, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇫🇷 Paris 04, server: 2606:4700:9ade:6c35:8cb3:f6f7:ea96:df44, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇫🇷 Paris 05, server: 2606:4700:90dd:da3e:9c19:e462:ad71:bf39, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇫🇷 Paris 06, server: 2606:4700:8cad:3854:6a5b:ea8d:7294:1f54, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇳🇱 Amsterdam 01, server: 2606:4700:9aed:d58a:afb9:9e9c:4079:f37b, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇳🇱 Amsterdam 02, server: 2606:4700:8dee:3b04:ec1b:de3:8c94:e7a, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇳🇱 Amsterdam 03, server: 2606:4700:9aec:931c:161f:c095:9d8a:6baa, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇺🇸 美国 01, server: 2606:4700:20:9cc0:321a:6a38:bf0a:f13c, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇺🇸 美国 02, server: 2606:4700:2e:b1ef:c940:8eb6:195b:6037, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇺🇸 美国 03, server: 2606:4700:26:ddef:7f02:1c45:e04c:ef84, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇺🇸 美国 04, server: 2606:4700:2b:d032:1366:bf7b:b779:6d31, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇺🇸 美国 05, server: 2606:4700:24:af8:8be3:6e5:8ab6:1f30, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇺🇸 美国 06, server: 2606:4700:25:a5da:d718:d947:d1b6:d9b6, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇺🇸 美国 07, server: 2606:4700:28:b0f7:53cb:8eaf:2356:d436, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇺🇸 美国 08, server: 2606:4700:2e:324a:6d12:228f:6d6:96af, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇺🇸 美国 09, server: 2606:4700:2f:f0f9:e973:cf91:1dd1:b80d, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇺🇸 美国 10, server: 2a06:98c1:3122:6322:8136:20a0:1f44:9408, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇺🇸 美国 11, server: 2606:4700:3056:a825:4ca0:c863:7d:8410, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇺🇸 美国 12, server: 2606:4700:a9:a8d8:40f1:6d5c:b5e1:51d3, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇺🇸 美国 13, server: 2803:f800:52:5391:e550:4d8a:d5d4:9220, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇺🇸 美国 14, server: 2606:4700:a1:ee1b:bbe8:b492:fcd2:2456, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇭🇰 Hong Kong 01, server: 2606:4700:21:e25b:c96d:f34a:743f:1fa8, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇩🇪 Frankfurt 01, server: 2606:4700:9aef:c4f3:5cd8:e3cb:4454:73f6, port: 2087, type: vless, uuid: d7003d5b-c499-4bb3-8b8b-edfcab837826, tls: true, tfo: false, skip-cert-verify: true, servername: lyt040722.filegear-sg.me, client-fingerprint: random, network: ws, ws-opts: {path: /proxyip=ProxyIP.KR.CMLiussss.net, headers: {Host: lyt040722.filegear-sg.me}}}
-  - {name: 🇺🇸 美国-claw, server: ykaaodaenzzl.us-west-1.clawcloudrun.com, port: 443, type: vless, uuid: ff98c140-79ee-4e2a-9e5d-f23e3de3a06c, cipher: none, tls: true, tfo: false, skip-cert-verify: true, servername: ykaaodaenzzl.us-west-1.clawcloudrun.com, client-fingerprint: random, network: ws, ws-opts: {path: /data, headers: {Host: ykaaodaenzzl.us-west-1.clawcloudrun.com}}}
+  - name: CF_V1_www.visa.com_80
+    type: vless
+    server: www.visa.com
+    port: 80
+    uuid: 15b11c09-8977-4932-93d4-a1fead556df1
+    udp: false
+    tls: false
+    network: ws
+    ws-opts:
+      path: "/?ed=2560"
+      headers:
+        Host: lyt040722.huolianche.workers.dev
+  - name: CF_V2_cis.visa.com_8080
+    type: vless
+    server: cis.visa.com
+    port: 8080
+    uuid: 15b11c09-8977-4932-93d4-a1fead556df1
+    udp: false
+    tls: false
+    network: ws
+    ws-opts:
+      path: "/?ed=2560"
+      headers:
+        Host: lyt040722.huolianche.workers.dev
+  - name: CF_V3_africa.visa.com_8880
+    type: vless
+    server: africa.visa.com
+    port: 8880
+    uuid: 15b11c09-8977-4932-93d4-a1fead556df1
+    udp: false
+    tls: false
+    network: ws
+    ws-opts:
+      path: "/?ed=2560"
+      headers:
+        Host: lyt040722.huolianche.workers.dev
+  - name: CF_V4_www.visa.com.sg_2052_新加坡
+    type: vless
+    server: www.visa.com.sg
+    port: 2052
+    uuid: 15b11c09-8977-4932-93d4-a1fead556df1
+    udp: false
+    tls: false
+    network: ws
+    ws-opts:
+      path: "/?ed=2560"
+      headers:
+        Host: lyt040722.huolianche.workers.dev
+  - name: CF_V5_www.visaeurope.at_2082
+    type: vless
+    server: www.visaeurope.at
+    port: 2082
+    uuid: 15b11c09-8977-4932-93d4-a1fead556df1
+    udp: false
+    tls: false
+    network: ws
+    ws-opts:
+      path: "/?ed=2560"
+      headers:
+        Host: lyt040722.huolianche.workers.dev
+  - name: CF_V6_www.visa.com.mt_2086
+    type: vless
+    server: www.visa.com.mt
+    port: 2086
+    uuid: 15b11c09-8977-4932-93d4-a1fead556df1
+    udp: false
+    tls: false
+    network: ws
+    ws-opts:
+      path: "/?ed=2560"
+      headers:
+        Host: lyt040722.huolianche.workers.dev
+  - name: CF_V7_qa.visamiddleeast.com_2095
+    type: vless
+    server: qa.visamiddleeast.com
+    port: 2095
+    uuid: 15b11c09-8977-4932-93d4-a1fead556df1
+    udp: false
+    tls: false
+    network: ws
+    ws-opts:
+      path: "/?ed=2560"
+      headers:
+        Host: lyt040722.huolianche.workers.dev
+  - name: CF_V8_usa.visa.com_443_美国
+    type: vless
+    server: usa.visa.com
+    port: 443
+    uuid: 15b11c09-8977-4932-93d4-a1fead556df1
+    udp: false
+    tls: false
+    network: ws
+    ws-opts:
+      path: "/?ed=2560"
+      headers:
+        Host: lyt040722.huolianche.workers.dev
+  - name: CF_V9_myanmar.visa.com_8443_缅甸
+    type: vless
+    server: myanmar.visa.com
+    port: 8443
+    uuid: 15b11c09-8977-4932-93d4-a1fead556df1
+    udp: false
+    tls: false
+    network: ws
+    ws-opts:
+      path: "/?ed=2560"
+      headers:
+        Host: lyt040722.huolianche.workers.dev
+  - name: CF_V10_www.visa.com.tw_2053_台湾
+    type: vless
+    server: www.visa.com.tw
+    port: 2053
+    uuid: 15b11c09-8977-4932-93d4-a1fead556df1
+    udp: false
+    tls: false
+    network: ws
+    ws-opts:
+      path: "/?ed=2560"
+      headers:
+        Host: lyt040722.huolianche.workers.dev
+  - name: CF_V11_www.visaeurope.ch_2083
+    type: vless
+    server: www.visaeurope.ch
+    port: 2083
+    uuid: 15b11c09-8977-4932-93d4-a1fead556df1
+    udp: false
+    tls: false
+    network: ws
+    ws-opts:
+      path: "/?ed=2560"
+      headers:
+        Host: lyt040722.huolianche.workers.dev
+  - name: CF_V12_www.visa.com.br_2087_巴西
+    type: vless
+    server: www.visa.com.br
+    port: 2087
+    uuid: 15b11c09-8977-4932-93d4-a1fead556df1
+    udp: false
+    tls: false
+    network: ws
+    ws-opts:
+      path: "/?ed=2560"
+      headers:
+        Host: lyt040722.huolianche.workers.dev
+  - name: CF_V13_www.visasoutheasteurope.com_2096_东南欧
+    type: vless
+    server: www.visasoutheasteurope.com
+    port: 2096
+    uuid: 15b11c09-8977-4932-93d4-a1fead556df1
+    udp: false
+    tls: false
+    network: ws
+    ws-opts:
+      path: "/?ed=2560"
+      headers:
+        Host: lyt040722.huolianche.workers.dev
+proxy-groups:
+  - name: 负载均衡
+    type: load-balance
+    url: http://www.gstatic.com/generate_204
+    interval: 300
+    proxies:
+      - CF_V1_www.visa.com_80
+      - CF_V2_cis.visa.com_8080
+      - CF_V3_africa.visa.com_8880
+      - CF_V4_www.visa.com.sg_2052_新加坡
+      - CF_V5_www.visaeurope.at_2082
+      - CF_V6_www.visa.com.mt_2086
+      - CF_V7_qa.visamiddleeast.com_2095
+      - CF_V8_usa.visa.com_443_美国
+      - CF_V9_myanmar.visa.com_8443_缅甸
+      - CF_V10_www.visa.com.tw_2053_台湾
+      - CF_V11_www.visaeurope.ch_2083
+      - CF_V12_www.visa.com.br_2087_巴西
+      - CF_V13_www.visasoutheasteurope.com_2096_东南欧
+  - name: 自动选择
+    type: url-test
+    url: http://www.gstatic.com/generate_204
+    interval: 300
+    tolerance: 50
+    proxies:
+      - CF_V1_www.visa.com_80
+      - CF_V2_cis.visa.com_8080
+      - CF_V3_africa.visa.com_8880
+      - CF_V4_www.visa.com.sg_2052_新加坡
+      - CF_V5_www.visaeurope.at_2082
+      - CF_V6_www.visa.com.mt_2086
+      - CF_V7_qa.visamiddleeast.com_2095
+      - CF_V8_usa.visa.com_443_美国
+      - CF_V9_myanmar.visa.com_8443_缅甸
+      - CF_V10_www.visa.com.tw_2053_台湾
+      - CF_V11_www.visaeurope.ch_2083
+      - CF_V12_www.visa.com.br_2087_巴西
+      - CF_V13_www.visasoutheasteurope.com_2096_东南欧
+  - name: 🌍选择代理
+    type: select
+    proxies:
+      - 负载均衡
+      - 自动选择
+      - DIRECT
+      - CF_V1_www.visa.com_80
+      - CF_V2_cis.visa.com_8080
+      - CF_V3_africa.visa.com_8880
+      - CF_V4_www.visa.com.sg_2052_新加坡
+      - CF_V5_www.visaeurope.at_2082
+      - CF_V6_www.visa.com.mt_2086
+      - CF_V7_qa.visamiddleeast.com_2095
+      - CF_V8_usa.visa.com_443_美国
+      - CF_V9_myanmar.visa.com_8443_缅甸
+      - CF_V10_www.visa.com.tw_2053_台湾
+      - CF_V11_www.visaeurope.ch_2083
+      - CF_V12_www.visa.com.br_2087_巴西
+      - CF_V13_www.visasoutheasteurope.com_2096_东南欧
