--- a/subscription.yaml
+++ b/subscription.yaml
@@ -1,5 +1,5 @@
 proxies:
-  - name: CF_V1_www.visa.com_80
+  - name: CF_V1_www.visa.com_80_美国
     type: vless
     server: www.visa.com
     port: 80
@@ -11,7 +11,7 @@ proxies:
       path: "/?ed=2560"
       headers:
         Host: lyt040722.huolianche.workers.dev
-  - name: CF_V2_cis.visa.com_8080
+  - name: CF_V2_cis.visa.com_8080_美国
     type: vless
     server: cis.visa.com
     port: 8080
@@ -23,7 +23,7 @@ proxies:
       path: "/?ed=2560"
       headers:
         Host: lyt040722.huolianche.workers.dev
-  - name: CF_V3_africa.visa.com_8880
+  - name: CF_V3_africa.visa.com_8880_南非
     type: vless
     server: africa.visa.com
     port: 8880
@@ -47,7 +47,7 @@ proxies:
       path: "/?ed=2560"
       headers:
         Host: lyt040722.huolianche.workers.dev
-  - name: CF_V5_www.visaeurope.at_2082
+  - name: CF_V5_www.visaeurope.at_2082_奥地利
     type: vless
     server: www.visaeurope.at
     port: 2082
@@ -59,7 +59,7 @@ proxies:
       path: "/?ed=2560"
       headers:
         Host: lyt040722.huolianche.workers.dev
-  - name: CF_V6_www.visa.com.mt_2086
+  - name: CF_V6_www.visa.com.mt_2086_马耳他
     type: vless
     server: www.visa.com.mt
     port: 2086
@@ -71,7 +71,7 @@ proxies:
       path: "/?ed=2560"
       headers:
         Host: lyt040722.huolianche.workers.dev
-  - name: CF_V7_qa.visamiddleeast.com_2095
+  - name: CF_V7_qa.visamiddleeast.com_2095_卡塔尔
     type: vless
     server: qa.visamiddleeast.com
     port: 2095
@@ -119,7 +119,7 @@ proxies:
       path: "/?ed=2560"
       headers:
         Host: lyt040722.huolianche.workers.dev
-  - name: CF_V11_www.visaeurope.ch_2083
+  - name: CF_V11_www.visaeurope.ch_2083_瑞士
     type: vless
     server: www.visaeurope.ch
     port: 2083
@@ -143,7 +143,7 @@ proxies:
       path: "/?ed=2560"
       headers:
         Host: lyt040722.huolianche.workers.dev
-  - name: CF_V13_www.visasoutheasteurope.com_2096_东南欧
+  - name: CF_V13_www.visasoutheasteurope.com_2096_塞尔维亚
     type: vless
     server: www.visasoutheasteurope.com
     port: 2096
@@ -161,54 +161,54 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - CF_V1_www.visa.com_80
-      - CF_V2_cis.visa.com_8080
-      - CF_V3_africa.visa.com_8880
+      - CF_V1_www.visa.com_80_美国
+      - CF_V2_cis.visa.com_8080_美国
+      - CF_V3_africa.visa.com_8880_南非
       - CF_V4_www.visa.com.sg_2052_新加坡
-      - CF_V5_www.visaeurope.at_2082
-      - CF_V6_www.visa.com.mt_2086
-      - CF_V7_qa.visamiddleeast.com_2095
+      - CF_V5_www.visaeurope.at_2082_奥地利
+      - CF_V6_www.visa.com.mt_2086_马耳他
+      - CF_V7_qa.visamiddleeast.com_2095_卡塔尔
       - CF_V8_usa.visa.com_443_美国
       - CF_V9_myanmar.visa.com_8443_缅甸
       - CF_V10_www.visa.com.tw_2053_台湾
-      - CF_V11_www.visaeurope.ch_2083
+      - CF_V11_www.visaeurope.ch_2083_瑞士
       - CF_V12_www.visa.com.br_2087_巴西
-      - CF_V13_www.visasoutheasteurope.com_2096_东南欧
+      - CF_V13_www.visasoutheasteurope.com_2096_塞尔维亚
   - name: 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     tolerance: 50
     proxies:
-      - CF_V1_www.visa.com_80
-      - CF_V2_cis.visa.com_8080
-      - CF_V3_africa.visa.com_8880
+      - CF_V1_www.visa.com_80_美国
+      - CF_V2_cis.visa.com_8080_美国
+      - CF_V3_africa.visa.com_8880_南非
       - CF_V4_www.visa.com.sg_2052_新加坡
-      - CF_V5_www.visaeurope.at_2082
-      - CF_V6_www.visa.com.mt_2086
-      - CF_V7_qa.visamiddleeast.com_2095
+      - CF_V5_www.visaeurope.at_2082_奥地利
+      - CF_V6_www.visa.com.mt_2086_马耳他
+      - CF_V7_qa.visamiddleeast.com_2095_卡塔尔
       - CF_V8_usa.visa.com_443_美国
       - CF_V9_myanmar.visa.com_8443_缅甸
       - CF_V10_www.visa.com.tw_2053_台湾
-      - CF_V11_www.visaeurope.ch_2083
+      - CF_V11_www.visaeurope.ch_2083_瑞士
       - CF_V12_www.visa.com.br_2087_巴西
-      - CF_V13_www.visasoutheasteurope.com_2096_东南欧
+      - CF_V13_www.visasoutheasteurope.com_2096_塞尔维亚
   - name: 🌍选择代理
     type: select
     proxies:
       - 负载均衡
       - 自动选择
       - DIRECT
-      - CF_V1_www.visa.com_80
-      - CF_V2_cis.visa.com_8080
-      - CF_V3_africa.visa.com_8880
+      - CF_V1_www.visa.com_80_美国
+      - CF_V2_cis.visa.com_8080_美国
+      - CF_V3_africa.visa.com_8880_南非
       - CF_V4_www.visa.com.sg_2052_新加坡
-      - CF_V5_www.visaeurope.at_2082
-      - CF_V6_www.visa.com.mt_2086
-      - CF_V7_qa.visamiddleeast.com_2095
+      - CF_V5_www.visaeurope.at_2082_奥地利
+      - CF_V6_www.visa.com.mt_2086_马耳他
+      - CF_V7_qa.visamiddleeast.com_2095_卡塔尔
       - CF_V8_usa.visa.com_443_美国
       - CF_V9_myanmar.visa.com_8443_缅甸
       - CF_V10_www.visa.com.tw_2053_台湾
-      - CF_V11_www.visaeurope.ch_2083
+      - CF_V11_www.visaeurope.ch_2083_瑞士
       - CF_V12_www.visa.com.br_2087_巴西
-      - CF_V13_www.visasoutheasteurope.com_2096_东南欧
+      - CF_V13_www.visasoutheasteurope.com_2096_塞尔维亚
